[package]
name = "rustytorrent"
version = "0.1.0"
authors = ["Tony Thompson <ajthomps51@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

memmap = "0.7.0"
sha-1 = "0.9.1"
reqwest = { version = "0.10.6", features = ["blocking"] }
bit-vec = "0.6.2"
mio = { version = "0.7", features = ["os-poll", "tcp"]}