[package]
name = "rustytorrent"
version = "0.1.0"
authors = ["Tony Thompson <ajthomps51@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

sha-1 = "0.9.1"
reqwest = { version = "0.10.6", features = ["blocking"] }
bit-set = "0.5.2"
bit-vec = "0.6.2"
mio = { version = "0.7", features = ["os-poll", "tcp"]}
slog = { version = "2.5.2", features = ["max_level_trace", "release_max_level_warn"]}
slog-async = { version = "2.5.0"}
slog-term = { version = "2.6.0"}
slog-stdlog = { version = "4.0.0"}
slog-scope = { version = "4.0.0"}
log = {version = "0.4.11"}
rand = "0.7"

[profile.release]
opt-level = 3
debug = true
debug-assertions = false
overflow-checks = false
lto = false
panic = 'unwind'
incremental = false
codegen-units = 16
rpath = false