[package]
name = "rustytorrent"
version = "0.1.0"
authors = ["Tony Thompson <ajthomps51@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

sha-1 = "0.9.1"
reqwest = { version = "0.10.6", features = ["blocking"] }
bit-set = "0.5.2"
bit-vec = "0.6.2"
mio = { version = "0.7", features = ["os-poll", "tcp"]}
num-traits = "0.2.12"
slog = { version = "2.5.2"}
slog-async = { version = "2.5.0"}
slog-term = { version = "2.6.0"}
slog-stdlog = { version = "4.0.0"}
slog-scope = { version = "4.0.0"}
log = {version = "0.4.11", features = ["max_level_debug", "release_max_level_info"]}
rand = "0.7"
tempfile = "3.3.0"
chrono = "0.4.19"
env_logger = "0.9.0"
rccell = "0.1.3"
write_to = { path = "../write_to" }

[profile.release]
opt-level = 3
debug = true
debug-assertions = false
overflow-checks = false
lto = false
panic = 'unwind'
incremental = false
codegen-units = 16
rpath = false